--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
-dist: focal
-
 language: csharp
 mono: none
-dotnet: 3.1
+dotnet: 5.0
 script:
  - dotnet restore
+ - dotnet build
 
 addons:
  apt:
   sources:
    - libcharls2
-
-sudo: false
